--- a/index.html
+++ b/index.html
@@ -36,48 +36,46 @@
           <button id="specialButton" class="cta-button">Open Your Gift</button>
         </section>
 
-        <section class="personalize">
-          <h2>Create a Personal Message</h2>
-          <div class="form-group">
-            <input type="text" id="recipientName" placeholder="Recipient's Name">
-            <textarea id="personalMessage" placeholder="Your special message..."></textarea>
-            <button id="createMessage" class="cta-button">Create Card</button>
+
+        <section class="song-display">
+          <h1>TOP NHỮNG BÀI HÁT CHÁY NHẤT 8/3</h1>
+          <h2 id="songTitle">Chọn bài hát</h2>
+          <div class="song-thumbnails">
+            <div class="song-box" data-index="0">
+              <img src="./meo_congsan.jpg" alt="FEIN">
+            </div>
+            <div class="song-box" data-index="1">
+              <img src="./meo1.jpg" alt="Khế ước">
+            </div>
+            <div class="song-box" data-index="2">
+              <img src="./cho1.jpg" alt="Cơn mưa xa dần">
+            </div>
           </div>
-          <div id="personalCard" class="hidden">
-            <div class="card-content">
-              <h3>Dear <span id="cardName"></span>,</h3>
-              <p id="cardMessage"></p>
-              <p class="signature">With love and appreciation,</p>
-            </div>
-            <div class="share-buttons">
-              <p>Tự gửi lời nhắn cho bản thân</p>
-              <div class="social-icons">
-                <a href="https://www.facebook.com/tuitentuan2511" class="social-icon" id="shareFacebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.facebook.com/tuitentuan2511" class="social-icon" id="shareTwitter"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/ahn_7aun/" class="social-icon" id="shareInstagram"><i class="fab fa-instagram"></i></a>
-              </div>
-            </div>
+          <div id="songLyricsContainer">
+            <p id="songLyrics"></p>
           </div>
         </section>
+        
+        
 
         <section class="gallery">
           <h2>Điểm mạnh</h2>
           <div class="gallery-container">
             <div class="gallery-item">
               <div class="image-container">
-                <img src="./dist/assets/plien_1.jpg" alt="Women Empowerment">
+                <img src="./plien1.jpg" alt="Women Empowerment">
               </div>
               <p>Xinh gái</p>
             </div>
             <div class="gallery-item">
               <div class="image-container">
-                <img src="./dist/assets/plien_tuan.jpg" alt="Women Leadership">
+                <img src="./plien_at.jpg" alt="Women Leadership">
               </div>
               <p>Ghệ đẹp</p>
             </div>
             <div class="gallery-item">
               <div class="image-container">
-                <img src="./dist/assets/plien_2.jpg" alt="Women Celebration">
+                <img src="./plien2.jpg" alt="Women Celebration">
               </div>
               <p>Tươi ^_^</p>
             </div>
